--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,8 +12,8 @@
   abstract={As part of a larger project to develop a generative artificial intelligence (GenAI) literacy framework and toolkit for higher education, this poster presents an analysis of seven literacy frameworks relevant to GenAI literacy in academic contexts. Through thematic analysis, we identified 10 competencies essential for GenAI-literate students in higher education. These competencies are organized into four progressive stages: (1) understanding GenAI at conceptual and technical levels and its capabilities and limitations; (2) using GenAI tools purposefully, effectively, and appropriately; (3) analyzing and evaluating various GenAI models and tools for performance and societal, ethical, and legal impacts, and (4) customizing or creating GenAI tools to address specific needs and generate innovative applications or theoretical insights. We discuss key implications of the results and next steps for developing a GenAI literacy framework for higher education.},
   abbr={ASIST},
   doi={https://doi.org/10.1002/pra2.1416},
-  pdf={2025-ASIST-Abstract1},
-  poster={2024-ASIST-Poster1}
+  pdf={2025-ASIST-Abstract1.pdf},
+  poster={2024-ASIST-Poster1.pdf}
 }
 
 @article{choi2025developing,
@@ -27,8 +27,8 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={This study initiated the development of a new scale to measure perceptions of information credibility on the web, distinguishing between trustworthiness and expertise as core dimensions. Building on a previous analysis of the literature on credibility assessments of information on social media, we generated a pool of 15 items, six for trustworthiness and nine for expertise. Following established scale development guidelines, we refined the scale through expert reviews and cognitive interviews with users. Experts (n = 2) rated most items as highly relevant and offered suggestions for refinement, such as including new items. Users (n = 9) confirmed item clarity but raised concerns about certain terms and perceived objectivity. These preliminary findings support the scale's relevance and will inform revisions for subsequent validation. Ongoing work will expand participant feedback and move toward large-scale empirical testing.},
   doi={https://doi.org/10.1002/pra2.1415},
-  pdf={2025-ASIST-Abstract2},
-  poster={2025-ASIST-Poster2},
+  pdf={2025-ASIST-Abstract2.pdf},
+  poster={2025-ASIST-Poster2.pdf},
 }
 
 @article{yu2025researching,
