--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,8 +12,8 @@
   abstract={As part of a larger project to develop a generative artificial intelligence (GenAI) literacy framework and toolkit for higher education, this poster presents an analysis of seven literacy frameworks relevant to GenAI literacy in academic contexts. Through thematic analysis, we identified 10 competencies essential for GenAI-literate students in higher education. These competencies are organized into four progressive stages: (1) understanding GenAI at conceptual and technical levels and its capabilities and limitations; (2) using GenAI tools purposefully, effectively, and appropriately; (3) analyzing and evaluating various GenAI models and tools for performance and societal, ethical, and legal impacts, and (4) customizing or creating GenAI tools to address specific needs and generate innovative applications or theoretical insights. We discuss key implications of the results and next steps for developing a GenAI literacy framework for higher education.},
   abbr={ASIST},
   doi={https://doi.org/10.1002/pra2.1416},
-  pdf={2025-ASIST-Abstract1},
-  poster={2024-ASIST-Poster1}
+  pdf={2025-ASIST-Abstract1.pdf},
+  poster={2024-ASIST-Poster1.pdf}
 }
 
 @article{choi2025developing,
