--- a/_news/2025-11-14.md
+++ b/_news/2025-11-14.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Received the Best Published SIG AI Paper.
+title: Our JASIST paper on college students' credibility assessments of GenAI-generated information for academic tasks has been chosen as the 2024 SIG AI Best Published Paper.
 date: 2025-11-14
 inline: false
 related_posts: false
