Add the panel slides

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -42,6 +42,7 @@
   abstract={Health information behavior research occupies a central position within the field of Library and Information Science (LIS), given its emphasis on the complex interaction between health-related information, human, and technology. While health information behavior research has been steadily progressing over time, it has undergone significant evolution with the advancement of digital technologies such as artificial intelligence. The goal of this panel is to bring together scholars who have actively contributed to health information behavior research, with a specific focus on the integration of Artificial Intelligence (AI) into health-related information and information behavior settings. Additionally, we will present our research on the current landscape of health information behavior, the applications of AI in researching health information behavior, its limitations, and its societal impact. These insights will spark discussions among participants and help foster a deeper understanding of the opportunities and the responsible use of AI technologies in health information behavior research.},
   doi={https://doi.org/10.1002/pra2.1390},
   abbr={ASIST},
+  slides={2025-ASIST-Panel-Slides.pdf}
 }
 
 @article{choi2025mturk,
