--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
   doi={https://doi.org/10.1002/pra2.1416},
   pdf={2025-ASIST-Abstract1.pdf},
   poster={2025-ASIST-Poster1.pdf},
+  preview={2025-ASIST-ConfProc.png}
 }
 
 @article{choi2025developing,
@@ -27,7 +28,7 @@
   abbr={ASIST},
   doi={https://doi.org/10.1002/pra2.1415},
   pdf={2025-ASIST-Abstract2.pdf},
-  poster={2025-ASIST-Poster2.pdf},
+  poster={2025-ASIST-Poster2.webp},
 }
 
 @article{yu2025researching,
