--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -99,6 +99,7 @@
   doi={https://doi.org/10.1002/pra2.1116}, 
   pdf={2024-ASIST-Abstract1.pdf},
   abbr={ASIST},
+  preview={2024-ASIST-ConfProc.jpg}
 }
 
 @article{xie2024help,
@@ -129,7 +130,8 @@
   doi={https://doi.org/10.1002/pra2.1125},
   pdf={2024-ASIST-Abstract2.pdf},
   poster={2024-ASIST-Poster2.pdf},
-  abbr={ASIST}
+  abbr={ASIST},
+  preview={2024-ASIST-ConfProc.jpg}
 }
 
 @article{choi2023developing,
