--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -28,7 +28,7 @@
   abbr={ASIST},
   doi={https://doi.org/10.1002/pra2.1415},
   pdf={2025-ASIST-Abstract2.pdf},
-  poster={2025-ASIST-Poster2.webp},
+  poster={2025-ASIST-Poster2.png},
 }
 
 @article{yu2025researching,
