--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,33 @@
 
+@article{choi2025mturk,
+  title={Perceived importance and predictive power: Key criteria for judging information credibility on social Q&A platforms},
+  author={Choi, Wonchan and Lee, Hyun Seung},
+  journal={The Electronic Library},
+  year={2025},
+  publisher={Emerald Publishing},
+  abstract={Purpose. This study investigated how users assess the credibility of information on social question-and-answer (Q&A) platforms. The study builds on a social Q&A-specific web credibility framework (Choi et al., 2023), integrating a two-dimensional model of credibility—trustworthiness and expertise (Hovland et al., 1953)—and three types of web credibility cues and heuristics—author or community, content, and design (Fogg, 2003). 
+  Methodology. Using online survey data from 598 users, we employed exploratory factor analysis to identify 10 credibility criteria across three categories: author or community, content, and design. One-sample t-tests assessed the perceived importance of these criteria, and multiple regression analyses examined their associations with two core credibility dimensions—trustworthiness and expertise—while controlling for user characteristics. 
+  Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), only six—community reputation, appropriate design, moderation, engaging design, reference reliability, and decency—were significantly associated with perceived trustworthiness, expertise, or both. In contrast, traditionally valued criteria related to answer quality or author characteristics had limited predictive power. These findings support a refined, empirically grounded eight-criterion framework for credibility in social Q&A environments. 
+  Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
+  selected={true},
+  abbr={Journal},
+  pdf={2025-TEL-Preprint.pdf},
+  preview={el.png}
+}
+
+@article{xie2025investigating,
+  title={Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations},
+  author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
+  journal={Journal of the Association for Information Science and Technology},
+  year={2025},
+  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
+  abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
+  doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
+  selected={true},
+  abbr={JASIST},
+  preview={jasist.jpg}
+}
+
 @article{choi2025genai,
   title={GenAI competencies in higher education: An analysis of existing literacy frameworks},
   author={Choi, Wonchan and Bak, Hyerin and Stvilia, Besiki and Zhang, Yan},
@@ -8,7 +37,7 @@
   pages={1399--1401},
   year={2025},
   abstract={As part of a larger project to develop a generative artificial intelligence (GenAI) literacy framework and toolkit for higher education, this poster presents an analysis of seven literacy frameworks relevant to GenAI literacy in academic contexts. Through thematic analysis, we identified 10 competencies essential for GenAI-literate students in higher education. These competencies are organized into four progressive stages: (1) understanding GenAI at conceptual and technical levels and its capabilities and limitations; (2) using GenAI tools purposefully, effectively, and appropriately; (3) analyzing and evaluating various GenAI models and tools for performance and societal, ethical, and legal impacts, and (4) customizing or creating GenAI tools to address specific needs and generate innovative applications or theoretical insights. We discuss key implications of the results and next steps for developing a GenAI literacy framework for higher education.},
-  abbr={ASIST},
+  abbr={ConfProc},
   doi={https://doi.org/10.1002/pra2.1416},
   pdf={2025-ASIST-Abstract1.pdf},
   poster={2025-ASIST-Poster1.pdf},
@@ -25,10 +54,11 @@
   year={2025},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={This study initiated the development of a new scale to measure perceptions of information credibility on the web, distinguishing between trustworthiness and expertise as core dimensions. Building on a previous analysis of the literature on credibility assessments of information on social media, we generated a pool of 15 items, six for trustworthiness and nine for expertise. Following established scale development guidelines, we refined the scale through expert reviews and cognitive interviews with users. Experts (n = 2) rated most items as highly relevant and offered suggestions for refinement, such as including new items. Users (n = 9) confirmed item clarity but raised concerns about certain terms and perceived objectivity. These preliminary findings support the scale's relevance and will inform revisions for subsequent validation. Ongoing work will expand participant feedback and move toward large-scale empirical testing.},
-  abbr={ASIST},
+  abbr={ConfProc},
   doi={https://doi.org/10.1002/pra2.1415},
   pdf={2025-ASIST-Abstract2.pdf},
-  poster={2025-ASIST-Poster2.png},
+  poster={2025-ASIST-Poster2.pdf},
+  preview={2025-ASIST-ConfProc.png}
 }
 
 @article{yu2025researching,
@@ -42,35 +72,9 @@
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={Health information behavior research occupies a central position within the field of Library and Information Science (LIS), given its emphasis on the complex interaction between health-related information, human, and technology. While health information behavior research has been steadily progressing over time, it has undergone significant evolution with the advancement of digital technologies such as artificial intelligence. The goal of this panel is to bring together scholars who have actively contributed to health information behavior research, with a specific focus on the integration of Artificial Intelligence (AI) into health-related information and information behavior settings. Additionally, we will present our research on the current landscape of health information behavior, the applications of AI in researching health information behavior, its limitations, and its societal impact. These insights will spark discussions among participants and help foster a deeper understanding of the opportunities and the responsible use of AI technologies in health information behavior research.},
   doi={https://doi.org/10.1002/pra2.1390},
-  abbr={ASIST},
-  slides={2025-ASIST-Panel.pdf}
-}
-
-@article{choi2025mturk,
-  title={Perceived importance and predictive power: Key criteria for judging information credibility on social Q&A platforms},
-  author={Choi, Wonchan and Lee, Hyun Seung},
-  journal={The Electronic Library},
-  year={2025},
-  publisher={Emerald Publishing},
-  abstract={Purpose. This study investigated how users assess the credibility of information on social question-and-answer (Q&A) platforms. The study builds on a social Q&A-specific web credibility framework (Choi et al., 2023), integrating a two-dimensional model of credibility—trustworthiness and expertise (Hovland et al., 1953)—and three types of web credibility cues and heuristics—author or community, content, and design (Fogg, 2003). 
-  Methodology. Using online survey data from 598 users, we employed exploratory factor analysis to identify 10 credibility criteria across three categories: author or community, content, and design. One-sample t-tests assessed the perceived importance of these criteria, and multiple regression analyses examined their associations with two core credibility dimensions—trustworthiness and expertise—while controlling for user characteristics. 
-  Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), only six—community reputation, appropriate design, moderation, engaging design, reference reliability, and decency—were significantly associated with perceived trustworthiness, expertise, or both. In contrast, traditionally valued criteria related to answer quality or author characteristics had limited predictive power. These findings support a refined, empirically grounded eight-criterion framework for credibility in social Q&A environments. 
-  Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
-  selected={true},
-  abbr={TEL},
-  pdf={2025-TEL-Preprint.pdf},
-}
-
-@article{xie2025investigating,
-  title={Investigating the interactions between individuals with disabilities and information retrieval systems: A review of help-seeking situations, search tactics, and design recommendations},
-  author={Xie, Iris and Choi, Wonchan and Lee, Hyun Seung and Hong, Bo Hyun and Wang, Shengang},
-  journal={Journal of the Association for Information Science and Technology},
-  year={2025},
-  publisher={John Wiley \& Sons, Inc. Hoboken, USA},
-  abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
-  doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
-  selected={true},
-  abbr={JASIST},
+  abbr={ConfProc},
+  slides={2025-ASIST-Panel.pdf},
+  preview={2025-ASIST-ConfProc.png}
 }
 
 @article{choi2025college,
