--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@
   doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
   selected={true},
   abbr={JASIST},
-  preview={jasist.jpg}
+  preview={2025-76-13-jasist.jpg}
 }
 
 @article{choi2025genai,
@@ -88,6 +88,7 @@
   pdf={2025-JASIST.pdf},
   selected={true},
   abbr={JASIST},
+  preview-={2025-76-13-jasist.jpg}
 }
 
 @article{an2024college,
@@ -118,7 +119,9 @@
   abstract={While it is common for blind and visually impaired (BVI) users to use mobile devices to search for information, little research has explored the accessibility issues they encounter in their interactions with information retrieval systems, in particular digital libraries (DLs). This study represents one of the most comprehensive research projects, investigating accessibility issues, especially help-seeking situations BVI users face in their DL search processes. One hundred and twenty BVI users were recruited to search for information in six DLs on four types of mobile devices (iPhone, iPad, Android phone, and Android tablet), and multiple data collection methods were employed: questionnaires, think-aloud protocols, transaction logs, and interviews. This paper reports part of a large-scale study, including the categories of help-seeking situations BVI users face in their interactions with DLs, focusing on seven types of help-seeking situations related to visual interactions on mobile platforms: difficulty finding a toggle-based search feature, difficulty understanding a video feature, difficulty navigating items on paginated sections, difficulty distinguishing collection labels from thumbnails, difficulty recognizing the content of images, difficulty recognizing the content of graphs, and difficulty interacting with multilayered windows. Moreover, corresponding design recommendations are also proposed: placing meaningful labels for icon-based features in an easy-to-access location, offering intuitive and informative video descriptions for video players, providing structure information about a paginated section, separating collection/item titles from thumbnail descriptions, incorporating artificial intelligence image/graph recognition mechanisms, and limiting screen reader interactions to active windows. Additionally, the limitations of the study and future research are discussed.},
   doi={https://doi.org/10.3390/jimaging10080205},
   pdf={2024-JImage.pdf},
-  abbr={Image},
+  abbr={Journal},
+  preview={jimaging.png}
+
 }
 
 @article{choi2024reflective,
