--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
   Findings. Although the identified criteria were rated highly overall in conceptual importance (M = 3.92), only six—community reputation, appropriate design, moderation, engaging design, reference reliability, and decency—were significantly associated with perceived trustworthiness, expertise, or both. In contrast, traditionally valued criteria related to answer quality or author characteristics had limited predictive power. These findings support a refined, empirically grounded eight-criterion framework for credibility in social Q&A environments. 
   Originality. This study offers a data-driven update to a 21-criterion credibility model, identifying the most influential criteria in terms of conceptual importance and applicability in evaluating the trustworthiness and expertise of information on peer-based, collaborative platforms. Also, it suggests potential to extend the framework to emerging environments such as generative artificial intelligence, where criteria like reference reliability remain relevant.},
   selected={true},
-  abbr={Journal},
+  doi={https://doi.org/10.1108/EL-05-2025-0188},
   pdf={2025-TEL-Preprint.pdf},
   preview={el.png}
 }
@@ -22,9 +22,8 @@
   year={2025},
   publisher={John Wiley \& Sons, Inc. Hoboken, USA},
   abstract={People with disabilities face barriers when engaging with information retrieval (IR) systems due to designs that overlook their needs. This systematic literature review explores research for individuals with disabilities interacting with IR systems. Relevant theories concerning disabilities were examined, and the gap model was used as the theoretical framework that guided the review. This review covers relevant research published from 2000 to 2023, focusing on user groups with sensory, cognitive, and motor impairments. The main topics are help-seeking situations encountered by these user groups in various IR systems due to system design not meeting user needs, and search tactics applied by users with different types of disabilities corresponding to various help-seeking situations. Design recommendations for IR systems and platforms were also examined. Key limitations in existing research and the authors' reflections are highlighted, including a lack of theories on the interactions between people with disabilities and IR systems, imbalanced research on and misclassification between different types of impairments, unclear distinctions between accessibility and usability, unexplored IR issues in mobile environments, and inadequate existing IR system designs, along with the challenges posed by one-size-fits-all design. Further research opportunities are also proposed.},
-  doi={https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/asi.24997},
+  doi={https://doi.org/10.1002/asi.24997},
   selected={true},
-  abbr={JASIST},
   preview={2025-76-13-jasist.jpg}
 }
 
@@ -87,7 +86,7 @@
   doi={https://doi.org/10.1002/asi.24978},
   pdf={2025-JASIST.pdf},
   selected={true},
-  abbr={JASIST},
+  abbr={Journal},
   preview-={2025-76-13-jasist.jpg}
 }
 
@@ -103,7 +102,7 @@
   abstract={The introduction of ChatGPT has sparked significant interest and presented both great opportunities and challenges to higher education. While more students are using ChatGPT, little is known about their mental models for and sensemaking of the system, including the metaphors they use to understand the system. In this exploratory study, we interviewed 25 students at three universities in the US during the summer of 2023 to identify the metaphors they use for ChatGPT. Through qualitative analysis of the interview transcripts, we found that participants commonly used metaphors to make sense of ChatGPT. They compared ChatGPT to humans and popular technologies or tools, with being the most frequently Google mentioned. These findings highlight the potential for metaphor-based design and the development of AI literacy programs.},
   doi={https://doi.org/10.1002/pra2.1116}, 
   pdf={2024-ASIST-Abstract1.pdf},
-  abbr={ASIST},
+  abbr={ConfProc},
   preview={2024-ASIST-ConfProc.jpg}
 }
 
@@ -154,7 +153,8 @@
   doi={https://doi.org/10.1016/j.ipm.2023.103321},
   pdf={2023-IPM.pdf},
   selected={true},
-  abbr={IPM},
+  abbr={Journal},
+  preview={ipm.jpg}
 }
 
 @article{zheng2023exploration,
@@ -168,8 +168,9 @@
   publisher={MDPI},
   abstract={In this fast-aging society, many older adults fail to meet the required level of exercise due to trainer shortages. Therefore, we developed a robot tutor to investigate the feasibility of robot-mediated exercise for older adults. Twenty older adults participated in an experimental study. A pre-exercise survey was used to assess their background. Each participant experienced a 30-min robot-led Tai Chi exercise followed by a post-exercise survey to evaluate the easiness of following the robot and expectations for future robot design. Participants’ Tai Chi performances were evaluated in terms of completion and accuracy. Associations between the surveys and the performance were also analyzed. All participants completed the study. Fifteen out of the twenty subjects had at least one chronic condition, and most practiced Tai Chi before the study but had never interacted with a robot. On average, the participants scored 93.09 and 85.21 out of 100 for movement completion and accuracy, respectively. Their initial movement accuracy was correlated with their attitude towards exercise. Most subjects reported that they could follow the robot’s movements and speeches well and were interested in using a robot tutor in the community. The study demonstrated the initial feasibility of robot-led Tai Chi exercise for older adults.},
   doi={https://doi.org/10.3390/app13095306}, 
-  pdf={2023-AP.pdf},
+  pdf={2023-AS.pdf},
   abbr={AS},
+  preview={2023-AS.png}
 }
 
 @article{choi2023exploring,
@@ -567,7 +568,7 @@
   abstract={This poster reports on the findings from interviews with fifty college students regarding what mobile health and wellness applications students used and how they choose those applications. In terms of application types, calorie and daily activity counters, such as MyFitnessPal and Lose It!, were most popular for the participants in the study, followed by running trackers, such as Nike+ Running and MapMyRun, and exercise/workout trackers, such as Fitness Buddy and Ab Workouts. Students seemed to prefer free applications and they evaluated and chose applications both indirectly (i.e., based on third party information and recommendations) and directly (i.e., through use).},
   abbr={ASIST},
   pdf={2014-ASIST-Poster.pdf},
-  doi={https://asistdl.onlinelibrary.wiley.com/doi/10.1002/meet.2014.14505101115},
+  doi={https://doi.org/10.1002/meet.2014.14505101115},
 }
 
 @article{choi2013guidelines,
