--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -233,6 +233,7 @@
   abstract={Given the aging world, it is important to understand older adults' everyday life information seeking (ELIS), which plays a vital role in healthy aging in later life. The present study analyzed national survey data collected by the Pew Research Center in 2016 based on Savolainen's ELIS model. The model's core concept, mastery of life, was measured in terms of general coping style to find information (cognitive vs. affective) and expectations about the findability of necessary information (optimistic vs. pessimistic). Weighted multiregression analyses were conducted to examine the associations between mastery of life and ELIS behavior of older Americans (65 years or older) in terms of breath and depth of interest in everyday topics, holding other sociocultural and demographic factors constant. The results showed a cognitive, as opposed to affective, coping style was associated with a wider range of ELIS topics and a deeper level of interest in political and cultural topics. However, whether an individual had an optimistic or pessimistic perspective toward information seeking was not associated with the variety or depth of interest in everyday topics. Neither dimension was related to the depth of interest in sports topics. Practical, theoretical, and methodological implications of the findings are provided.},
   pdf={2022-JASIST.pdf},
   abbr={JASIST},
+  preview={2022-73-3-jasist.jpg}
 }
 
 @article{park2022understanding,
@@ -313,7 +314,8 @@
   doi={https://doi.org/10.1002/asi.24341},
   abstract={Credibility assessment is a crucial component in the process of peopleʼs health information seeking, especially in the web context. Finding “credible” health information from a plethora of information on the web may be more challenging for older adults, who have relatively less experience with the Internet. This article reports on the findings of an exploratory study of older adultsʼ credibility assessments of online health information. The data collected through semistructured interviews with 21 older adult Internet users in the United States were analyzed based on the extended typology of web credibility (Choi & Stvilia, 2015, Journal of the Association for Information Science and Technology, 66, 2399–2414). The findings of the study revealed that older adults paid closer attention to operator-related credibility cues and heuristics when judging the credibility of health information on the web, followed by content- and design-related ones. Also, the findings suggest that participants who were younger and used the Internet more frequently employed a wider variety of cues and heuristics to evaluate the credibility of online health information. Based on these findings, both theoretical and practical implications of the research and future research directions are discussed.},
   pdf={2020-JASIST.pdf},
-  abbr={JASIST},
+  abbr={Journal},
+  preview={2020-71-11-jasist.jpg}
 }
 
 @article{choi2020systematic,
@@ -328,7 +330,8 @@
   doi={https://doi.org/10.1093/jamia/ocaa029},
   abstract={Objective: This article reports results from a systematic literature review of the current state of mobile health (mHealth) technologies that have the potential to support self-management for people with diabetes and hypertension. The review aims to (a) characterize mHealth technologies used or described in the mHealth literature and (b) summarize their effects on self-management for people with diabetes and hypertension from the clinical and technical standpoints. Materials and Methods: A systematic literature review was conducted following PRISMA guidelines. Online databases were searched in September 2018 to identify eligible studies for review that had been published since 2007, the start of the smartphone era. Data were extracted from included studies based on the PICOS framework. Results: Of the 11 studies included for in-depth review, 5 were clinical research examining patient health outcomes and 6 were technology-focused studies examining users’ experiences with mHealth technologies under development. The most frequently used mHealth technology features involved self-management support (n = 11) followed by decision support (n = 6) and shared decision-making (n = 6). Most clinical studies reported benefits associated with mHealth interventions. These included reported improvements in objectively measured patient health outcomes (n = 3) and perceptual or behavioral outcomes (n = 4). Discussion: Although most studies reported promising results in terms of the effects of mHealth interventions on patient health outcomes and experience, the strength of evidence was limited by the study designs. Conclusion: More randomized clinical trials are needed to examine the promise and limitations of mHealth technologies as assistive tools to facilitate the self-management of highly prevalent comorbidity of chronic conditions, such as diabetes and hypertension.},
   pdf={2020-JAMIA.pdf},
-  abbr={JAMIA},
+  abbr={Journal},
+  preview={2020-27-6-jamia.jpeg}
 }
 
 @article{oh2019challenges,
@@ -517,7 +520,8 @@
   doi={https://doi.org/10.1016/j.lisr.2015.04.007},
   abstract={This research explored the mobile wellness application-seeking behavior of college students. In particular, it examined what sources students used to obtain wellness information, what wellness applications students used and for what purposes, how they learned about those applications, and what factors influenced their decision to choose a particular wellness application from multiple alternatives. The results indicated that students most often used websites as sources of wellness information, followed by mobile applications, family and friends, and then physicians. Students most often learned about wellness applications from search engines and application stores. Physicians were the least mentioned source of learning about mobile wellness applications. The most popular application type was calorie and activity trackers. In addition, when asked to rate the importance of various mobile application characteristics in their decision to select a particular wellness application, students rated usability-related characteristics the highest, followed by application cost and content quality. This study contributes to current research and practice in mobile wellness application design and the provision of mobile wellness services. In particular, it can inform application designers and intermediaries about which mobile wellness applications students use, and how students search for and select those applications.},
   pdf={2015-LISR.pdf},
-  abbr={LISR},
+  abbr={Journal},
+  preview={lisr.jpg}
 }
 
 @article{choi2015web,
@@ -531,7 +535,8 @@
   doi={https://doi.org/10.1002/asi.23543},
   abstract={This article reviews theoretical and empirical studies on information credibility, with particular questions as to how scholars have conceptualized credibility, which is known as a multifaceted concept with underlying dimensions; how credibility has been operationalized and measured in empirical studies, especially in the web context; what are the important user characteristics that contribute to the variability of web credibility assessment; and how the process of web credibility assessment has been theorized. An agenda for future research on information credibility is also discussed.},
   pdf={2015-JASIST.pdf},
-  abbr={JASIST},
+  abbr={Journal},
+  preview={2015-66-12-jasist.jpg}
 }
 
 @article{choi2015new-b,
