--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -119,7 +119,7 @@
   doi={https://doi.org/10.3390/jimaging10080205},
   pdf={2024-JImage.pdf},
   abbr={Journal},
-  preview={jimaging.png}
+  preview={2024-10-8-jimaging.png}
 
 }
 
